--- a/backend/package.json
+++ b/backend/package.json
@@ -9,24 +9,28 @@
     "test": "jest"
   },
   "dependencies": {
-    "express": "^4.18.2",
-    "mongoose": "^7.5.0",
+    "bcryptjs": "^2.4.3",
     "cors": "^2.8.5",
     "dotenv": "^16.3.1",
-    "jsonwebtoken": "^9.0.2",
     "ethers": "^6.7.1",
-    "multer": "^1.4.5-lts.1",
-    "helmet": "^7.0.0",
+    "express": "^4.18.2",
     "express-rate-limit": "^6.10.0",
+    "helmet": "^7.0.0",
     "joi": "^17.9.2",
-    "bcryptjs": "^2.4.3"
+    "jsonwebtoken": "^9.0.2",
+    "mongoose": "^7.5.0",
+    "multer": "^1.4.5-lts.1"
   },
   "devDependencies": {
-    "nodemon": "^3.0.1",
-    "jest": "^29.6.2"
+    "jest": "^29.6.2",
+    "nodemon": "^3.0.1"
   },
-  "keywords": ["nft", "ticketing", "blockchain", "ethereum"],
+  "keywords": [
+    "nft",
+    "ticketing",
+    "blockchain",
+    "ethereum"
+  ],
   "author": "NFT Ticketing System",
   "license": "MIT"
 }
-
