--- a/backend/package.json
+++ b/backend/package.json
@@ -19,7 +19,8 @@
     "joi": "^17.9.2",
     "jsonwebtoken": "^9.0.2",
     "mongoose": "^7.5.0",
-    "multer": "^1.4.5-lts.1"
+    "multer": "^1.4.5-lts.1",
+    "nodemailer": "^7.0.13"
   },
   "devDependencies": {
     "jest": "^29.6.2",
